--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7,10 +7,27 @@ body {
   margin: 25% auto;
 }*/
 
+.hero i { 
+  display: block;
+  text-align: center;
+}
+
+.heading {
+  margin-top: 2.5em;
+}
+
 footer {
   position: fixed;
   bottom: 0px;
   width: 100%;
+}
+
+.btn-float-right { 
+  float: right 
+}
+
+input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
+  background-color: #ffffff !important;
 }
 
 /*.color.primary {
