--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30,6 +30,11 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
   background-color: #ffffff !important;
 }
 
+.loader {
+  text-align: center;
+  margin-top: 25%;
+}
+
 /*.color.primary {
   background-color: #f94263;
 }
